--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ section#telefone {
     transform: translate(-50%, -50%);
     background-image: url(../imagens/frame-iphone.png);
     background-repeat: no-repeat;
-    background-attachment: fixed
+    background-attachment: fixed;
 }
 
 iframe#tela {
@@ -42,4 +42,24 @@ iframe#tela {
     left: 22px;
     width: 269px;
     height: 471px;
+}
+
+section#redes-sociais {
+    display: grid;
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.404); 
+    border: 2px solid black;   
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid white;   
+    transform: translate(-3px, -3px);
+    box-shadow: 2px 2px 5px yellowgreen;
+    transition: .3s border .2s;
 }
